# class-exercises-fall2024

./: pyproject.toml
lab06/javascript_rps/: package.json  run-tests-vanilla.js  your-task.js
lab06/javascript_rps/test/: run-tests-mocha.js
lab06/python_rps/: run_tests_framework.py  run_tests_vanilla.py  your_task.py
lab07/: package.json
lab07/src/: App.jsx  ButtonCount.jsx  Profile.css
lab08/: package.json
lab09/: answers.md
topic05/app/: Arithmetiic.py
topic05/tests/: test_main.py
